# caddy

./: .cruft.json  .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  nginx.conf
.github/: .github.env
.github/workflows/: build-model.yml  build-scraper.yml  build.yml  checks.yml  cruft-update.yml  deploy-prod.yml  manual-release.yml  publish.yml  release.yml  reset-user.yml
docker-compose-config/: .env.example  dex-config.yaml  local-client.yaml  nginx.conf  opensearch.Dockerfile  user-switcher.conf  welcome.Dockerfile  welcome.sh
frontend/: Dockerfile  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/public/scripts/: govuk-frontend-5.12.0.min.js  iai-design-system.js
frontend/src/: auth.ts  middleware.ts
frontend/src/components/: AddUpdateResources.astro  Resources.astro  ResourcesTable.astro  SidePanel.astro  SidePanel.md  add-urls.ts  copy-link.ts  duplicate-urls.ts  footer.astro  iai-header.mjs  lit-wrapper.astro  markdown-converter.mjs  milkdown-editor.ts  sortable-table.ts  tiptap-editor.ts  upload-info.ts
frontend/src/layouts/: Layout.astro
frontend/src/logic/: data.ts
frontend/src/pages/: index.astro
frontend/src/pages/api/: add-urls.ts  add-user.ts  delete-collection.ts  delete-resource.ts  health.ts  remove-user.ts  types.ts  update-collection.ts  upload.ts
frontend/src/pages/api/collections/[collection]/resources/[resource]/: single-document.ts
frontend/src/pages/auth/: callback.astro  login.astro  logout.astro
frontend/src/pages/collections/: add.astro
frontend/src/pages/collections/[collection]/: all-content.astro  delete.astro  edit.astro  index.astro
frontend/src/pages/collections/[collection]/resources/: add.astro  index.astro
frontend/src/pages/collections/[collection]/resources/[resource]/: delete.astro  index.astro
frontend/src/pages/collections/[collection]/users/: add.astro  index.astro
frontend/src/pages/collections/[collection]/users/[user]/: edit.astro  remove.astro
frontend/src/styles/: global.css
frontend/tests/: tests.spec.ts
model/: Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
model/alembic/: env.py
model/alembic/versions/: 340fc40a6965_added_custom_prompt_to_collection_table.py  357bfc5f40d2_add_textchunk.py  37b0cb83d755_ensure_textchunks_are_in_qdrant.py  37c15fe1ab58_collection_name_length.py  46dd2326fb04_.py  56c74232415a_added_resource_version_table.py  65850da1c60f_add_resource.py  67029bed5083_convert_uppercase_emails_to_lowercase.py  6adc0f3cea8f_initial_migration.py  b73e61d59c3e_add_user_and_usercollection.py  cb8307a4a511_added_resource_version_table.py  da4b892c3a0b_added_cascade_relationships.py  f7bb12c62f44_added_url_to_resource.py
model/api/: app.py  config.py  decorators.py  depends.py  embedding_models.py  enums.py  environment.py  exceptions.py  file_upload.py  main.py  mcp_app.py  models.py  permissions.py  rest_app.py  scrape.py  search.py  services.py  types.py
model/api/auth/: __init__.py  endpoint_auth.py  token_auth.py
model/api/data_structures/: models.py  types.py
model/api/embeddings/: search.py
model/api/environments/: config.py  environment.py  local.py  production.py  test.py
model/api/mcp/: mcp_app.py
model/api/rest_api/: collections.py  resources.py  rest_app.py
model/api/services/: collections.py  resources.py  services.py
model/api/utilities/: depends.py  file_upload.py  permissions.py  scrape.py
model/scripts/: initialize_admin_users.py  postgres-init.sql  trial_caddy_search.py  upload_files.py
model/tests/: conftest.py  test_api.py  test_file_upload.py  test_mcp.py  test_search.py
scraper/: .env.example  Dockerfile  caddy_scraper.py  gcoe_scraper.py  opensearch_document_manager.py  os_tools.py  pdf_to_json.py  pyproject.toml  readme.md  run_bulk_upload.py  run_scrape.py  scrape_config.json  scrape_utils.py  summarising_gcoe.py  url_scraper.py
scraper/prompts/: summary_prompt.txt
terraform/: data.tf  diagram_script.py  ecr.tf  ecs.tf  iam.tf  load_balancer.tf  opensearch.tf  provider.tf  qdrant-efs.tf  qdrant.tf  rds.tf  secrets.tf  variables.tf
