[tool.poetry]
name = "caddy-model"
version = "0.1.0"
description = "Caddy Model API."
authors = ["Alex Moore <alex.moore@cabinetoffice.gov.uk>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.3.35"
python-dotenv = "^1.1.1"
langchain = "^0.3.27"
fastapi = "^0.118.2"
pydantic = "^2.12.0"
langchain-aws = "^0.2.35"
langchain-community = "^0.3.31"
boto3 = "^1.40.48"
requests-aws4auth = "^1.3.1"
uvicorn = "^0.37.0"
tiktoken = "^0.12.0"
mcp = {extras = ["cli"], version = "==1.8.0"}
python-multipart = "^0.0.20"
markitdown = {extras = ["docx", "outlook", "pdf", "pptx", "xls", "xlsx"], version = "^0.1.3"}
tqdm = "^4.67.1"
click = "^8.3.0"
pytest-env = "^1.1.5"
sentry-sdk = {extras = ["fastapi", "starlette"], version = "^2.40.0"}
multidict = "^6.7.0"
alembic = "^1.16.5"
sqlmodel = "^0.0.27"
psycopg2-binary = "^2.9.10"
pytest-postgresql = "^7.0.2"
email-validator = "^2.3.0"
pyjwt = "^2.10.1"
python-keycloak = "^5.8.1"
cryptography = "^46.0.2"
pgvector = "^0.4.1"
html2text = "^2025.4.15"
i-dot-ai-utilities = "^0.3.1"
python-slugify = "^8.0.4"
qdrant-client = {extras = ["fastembed"], version = "^1.15.1" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"
ruff = "^0.14.0"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
pytest-asyncio = "^1.2.0"
diagrams = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
env = [
  "ENVIRONMENT=test"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E501"]  # line length violations

[tool.poetry.scripts]
upload-files = "model.scripts.upload_files:ingest_files"
